add login request
